Fixed the layout of large extra block on small devices

--- a/_sass/_extra.sass
+++ b/_sass/_extra.sass
@@ -33,5 +33,11 @@
   .extra_row
     margin-top: 1rem
 
+  .extra_label
+    width: auto !important
+
+  .large .extra_label, .large .extra_content
+    padding-bottom: 0 !important
+
   .extra_content
     margin-left: 1rem
